fix: subscribe button align

--- a/src/pages/ChannelPage/MainChannelVideo/main-channel-video.module.scss
+++ b/src/pages/ChannelPage/MainChannelVideo/main-channel-video.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   gap: 3.2rem;
+  margin-bottom: 5rem;
 }
 
 .title-description-container {
